# bonnie-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demo.cpp  native-lib.cpp
app/src/main/java/com/android/sample/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
release/: bonnie-header.csv  bonnie.csv  copy.sh  run.sh
